src/objects/zqu__ProductRatePlanChargeTier__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Catalog_Sync_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product link to catalog sync history</description>
        <inlineHelpText>Product link to catalog sync history</inlineHelpText>
        <label>Catalog Sync History</label>
        <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Tier</relationshipLabel>
        <relationshipName>Product_RatePlan_Charge_Tier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Currency2__c</fullName>
        <description>The code corresponding to the currency for the tier&apos;s price.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <label>Currency (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountAmount__c</fullName>
        <description>The specific amount for a fixed discount.</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountPercentage__c</fullName>
        <description>The percentage of discount for a percentage discount.</description>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>zqu__EndingUnit__c</fullName>
        <description>The end number of a range of units for the tier.</description>
        <label>Ending Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__EntityID__c</fullName>
        <formula>zqu__ProductRatePlanCharge__r.zqu__EntityID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__IsOveragePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the price is an overage price, which is the price when usage surpasses the last defined tier.</description>
        <label>Is Overage Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat2__c</fullName>
        <description>Indicates if pricing is a flat fee or is per unit. This field is for tiered and volume pricing models only.</description>
        <label>Price Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__PriceFormat__c</fullName>
        <description>Flat Fee vs. Per Unit</description>
        <inlineHelpText>Flat Fee vs. Per Unit</inlineHelpText>
        <label>Price Format (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Price__c</fullName>
        <description>The price of the tier if the charge is a flat fee, or the price of each unit in the tier if the charge model is tiered pricing.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanChargeId__c</fullName>
        <description>The ID of the product rate plan charge associated with this tier. You can&apos;t create an unassociated tier.</description>
        <label>ProductRatePlanChargeId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <description>The product rate plan charge associated with this tier. You can&apos;t create an unassociated tier.</description>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product Rate Plan Charge Tier</relationshipLabel>
        <relationshipName>Product_RatePlan_Charge_Tier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__StartingUnit__c</fullName>
        <description>The starting number of a range of units for the tier.</description>
        <label>Starting Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SyncMessage__c</fullName>
        <description>Message for the Catalog Sync</description>
        <label>Sync Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__SyncStatus__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Tier__c</fullName>
        <description>A unique number that identifies the tier that the price applies to.</description>
        <label>Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZuoraId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan Charge Tier</label>
    <nameField>
        <label>Tier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zqu__Ending_Unit_Greater_Than_Starting_Unit</fullName>
        <active>true</active>
        <description>EndingUnit should be greater than StartingUnit</description>
        <errorConditionFormula>IF(
   OR(
      ISPICKVAL( zqu__ProductRatePlanCharge__r.zqu__Model__c , &apos;Overage Pricing&apos;),
      ISPICKVAL( zqu__ProductRatePlanCharge__r.zqu__Model__c , &apos;Tiered with Overage Pricing&apos;)
   ), 
   FALSE, 
   zqu__EndingUnit__c  &lt; zqu__StartingUnit__c)</errorConditionFormula>
        <errorDisplayField>zqu__EndingUnit__c</errorDisplayField>
        <errorMessage>EndingUnit should be greater than StartingUnit</errorMessage>
    </validationRules>
</CustomObject>